[package]
name = "Test"
version = "0.1.0"
authors = ["luzhlon <luzhlon@outlook.com>"]
edition = "2018"

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winbase", "tlhelp32", "handleapi", "winnt", "processthreadsapi", "psapi", "errhandlingapi"] }
